# FibonacciOrdreP

./: .gitignore  .gitmodules  README.md
Doc/: Bibli.yml  DocFib.typ  pascal.typ  template.typ  test.py
FIbP/: DocFib.typ
algo/: .gitignore  Makefile  README.md  compile_profiled.sh  fibo_calc_mod2  fibo_calc_mod2_ref  fibo_calc_mod2_working  gmon.out  maqao.lua  test.sh  test_negative_formula.py
algo/src/: cl_mod2.c  demo.c  demo_mod2.c  lib_fibo_jump.c  lib_fibo_jump.h  lib_fibo_jump_mod2.c  lib_fibo_jump_mod2.h  mod2.cl  test_cl
algo_rs/: Cargo.toml  rust-toolchain.toml
algo_rs/algo/: Cargo.toml
algo_rs/algo/src/: bit_iterator.rs  lib.rs
algo_rs/runner_gpu/: Cargo.toml  build.rs  shader
algo_rs/runner_gpu/src/: main.rs
algo_rs/shader/: Cargo.toml
algo_rs/shader/src/: lib.rs
algo_rs/wgpu_runner/: Cargo.toml  build.rs
algo_rs/wgpu_runner/src/: bit_iterator.rs  main.rs
fibo_render/: .gitignore  Cargo.toml  build.rs  makefile
fibo_render/src/: command_line.rs  constants.rs  draw_utils.rs  fibo.rs  fibo_fast.rs  fibo_test.rs  gmp_utils.rs  help.rs  main.rs  progressbar.rs  renderer.rs  window_manager.rs
rederFcont/: readme.md  renderFcont.cmi  renderFcont.cmx  renderFcont.ml  test.ml
rust_shader/: Cargo.toml
rust_shader/src/: algo.rs  bit_iterator.rs  dummy.rs  lib.rs  lib_old.rs
