[workspace]
resolver = "3"
members = ["algo","runner_gpu", "wgpu_runner"]
exclude = ["./runner_gpu/shader"]

[workspace.package]
version = "0.1.0"
authors = ["Louwen FRICOUT"]
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Le-foucheur/FibonacciOrdreP"



[profile.release.build-override]
opt-level = 3
codegen-units = 16
[profile.dev.build-override]
opt-level = 3
