[package]
name = "fibo_render"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sfml = { version = "0.21.0", optional = true }
libc = "0.2.153"
gmp-mpfr-sys = "1.6"
png = "0.17.13"

[features]
graphic = ["dep:sfml"]