[package]
name = "fibo_render"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sfml = { version = "0.21.0", optional = true }
png = "0.17.13"
libc-stdhandle = "0.1.0"
libc = "0.2"

[features]
graphic = ["dep:sfml"]
